--- a/0.0.0 我的世界/制谱教程.md
+++ b/0.0.0 我的世界/制谱教程.md
@@ -137,19 +137,18 @@ chcp 65001
 set jianpuly="D:\develop.r.1\lilypond-2.24.1\bin\jianpu-ly.py"
 
 set source="简谱"
-set output="乐谱"
+set output="曲谱"
 
-set middle="乐谱"
-set folder="乐谱"
+set middle="荷花"
 
 python %jianpuly% %source%.txt > %middle%.ly
 lilypond -o %output% --format=pdf,png %middle%.ly
 lilypond -o %output% --format=svg %middle%.ly
 
-md %folder%
+md %source%
 
-move .\%output%.* .\%folder%
-move .\%middle%.* .\%folder%
+move .\%output%.* .\%source%
+move .\%middle%.* .\%source%
 ```
 
 **8. 以后只要双击该脚本即可自动生成**
