嵌入式软件开发（集成开发环境）

--- a/8.0.0 開發筆記/8.0 嵌入式軟件開發/搭建開發環境/集成開發環境－GCC.ARM/程序調試.md
+++ b/8.0.0 開發筆記/8.0 嵌入式軟件開發/搭建開發環境/集成開發環境－GCC.ARM/程序調試.md
@@ -62,4 +62,4 @@
 - Debug\@OpenOCD.exe
 - Debug\@RemoteServer(GDBServer/JLinkGDBServer)
 
-![圖片加載失敗](assets/快捷任務/launch.json.png)
+![圖片加載失敗](assets/程序調試/launch.json.png)
